package com.company;

public class fileIO {
    public void writeTeamData(){

    }
    public void readTeamData(){

    }
    public void saveData(){

    }
}
