package com.company;

public class Match {
    int startTime;
    int endTime;
    public void getMatchTime(){

    }
}
