package com.company;

public class Team {
    String teamName;
    int teamSize;
    String[] teamPlayers;
    int teamScore;
    int teamPosition;
    @ toString(){

    }
    public void getTeamName(){

    }
    public void getTeamSize(){

    }
}
