package com.company;

public class Tournament {
    public void startMatch(){

    }
    public void endMatch(){

    }
    public void currentMatch(){

    }
    public void getMatchHistory(){

    }
}
