package com.company;

public class textUI {
    public void registerTeam(){

    }
    public void showTeams(){

    }
    public void showResults(){

    }
    public void getTeamPlacement(){

    }
    public void showAllMatches(){

    }
    public void showNextMatch(){

    }
}
